objects/TimeSheetEntry.object
<CustomObject>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Time Sheet Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <inlineHelpText>Fill in the persons name</inlineHelpText>
        <label>Technician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>